data/derived/fa15/progs/unify/prog2393.ml.out
Characters 40-41:
  let f a x = fun x a -> x x a in
                           ^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b -> 'c
